--- a/client/highscores.html
+++ b/client/highscores.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Trivia Dash</title>
+    <title>High Scores</title>
     <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="highscores.css" />
   </head>
   <body>
     <div class="container">
-      <div id="home" class="flex-center flex-column">
-        <h1>Trivia Dash</h1>
-        <a class="btn" href="game.html">Play</a>
-        <a class="btn" href="highscores.html">High Scores</a>
-        <a class="btn" href="end.html">Log In</a>
-        <a class="btn" href="end.html">Register an Account</a>
+      <div id="highScores" class="flex-center flex-column">
+        <h1 id="finalScore">High Scores</h1>
+        <ul id="highScoresList"></ul>
+        <a class="btn" href="/">Go Home</a>
       </div>
     </div>
-
+    <script src="highscores.js"></script>
   </body>
 </html>
