--- a/client/game.html
+++ b/client/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Play Trivia Dash</title> 
+    <title>Quick Quiz - Play</title>
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="game.css" />
   </head>
@@ -12,10 +12,9 @@
     <div class="container">
       <div id="loader"></div>
       <div id="game" class="justify-center flex-column hidden">
-        <div id="hud">u
+        <div id="hud">
           <div id="hud-item">
             <p id="progressText" class="hud-prefix">
-              Question
             </p>
             <div id="progressBar">
               <div id="progressBarFull"></div>
@@ -28,6 +27,10 @@
             <h1 class="hud-main-text" id="score">
               0
             </h1>
+            <a class="btn" href="end.html">Log In</a>
+          <br>
+          <br>
+          <br>
           </div>
         </div>
         <h2 id="question"></h2>
