updated username stuff

--- a/client/end.html
+++ b/client/end.html
@@ -23,10 +23,14 @@
             class="btn"
             id="saveScoreBtn"
             onclick="saveHighScore(event)"
-            disabled
+            
           >
             Save
           </button> 
+          type="submit"
+            class="btn"
+            id="loginuser"
+            onclick="saveHighScore(event)"
         </form>
         <a class="btn" href="game.html">Play Again</a>
         <a class="btn" href="/">Go Home</a>
