deleted alot of extra files + started implementing log in

--- a/client/register.html
+++ b/client/register.html
@@ -11,19 +11,12 @@
     <div class="container">
       <div id="home" class="flex-center flex-column">
         <h1>Trivia Dash</h1>
-        <p>Login</p>
-        <!--textbox to enter name-->
-        <form id="login">
-            Username:<br>
-            <input id="loginUsername" type="text" name="username" placeholder="Username" required><br><br>
-            <!--play button-->
+
+        <p>Create a New Account</p>
+        <form id="createacct">
+            <input id="createUsername" type="text" name="username" placeholder="Enter A Username" required><br><br>
             <input type="submit" value="Play!">
         </form>
-        <p id="loginvalue"></p>
-        <a class="btn" href="register.html">Create a New Account</a>
-        <!--leaderboard button-->
-        <a class="btn" href="highscores.html">High Scores</a>
-        <a class="btn" href="index.html">Delete</a>
         
       </div>
     </div>
