--- a/client/highscores.html
+++ b/client/highscores.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="highscores.css" />
   </head>
-  <body>
+  <body onload="displayData()">
     <div class="container">
       <div id="highScores" class="flex-center flex-column">
         <h1 id="finalScore">High Scores</h1>
-        <ul id="highScoresList"></ul>
-        <a class="btn" href="/">Go Home</a>
+        <p id="showData"></p>
+        <br>
+        <a class="btn" href="index.html">Go Home</a>
       </div>
     </div>
     <script src="highscores.js"></script>
