registeration works with functions in index

--- a/client/index.html
+++ b/client/index.html
@@ -17,10 +17,10 @@
             Username:<br>
             <input id="loginUsername" type="text" name="username" placeholder="Username" required><br><br>
             <!--play button-->
-            <input type="submit" value="Play!">
+            <input href="game.html" type="submit" value="Play!">
         </form>
         <p id="loginvalue"></p>
-        <a class="btn" href="register.html">Create a New Account</a>
+        <a class="btn" href="register.html" onclick="createUser()">Create a New Account</a>
         <!--leaderboard button-->
         <a class="btn" href="highscores.html">High Scores</a>
         <a class="btn" href="index.html">Delete</a>
