--- a/client/register.html
+++ b/client/register.html
@@ -15,7 +15,7 @@
         <p>Create a New Account</p>
         <form id="createacct">
             <input id="createUsername" type="text" name="username" placeholder="Enter A Username" required><br><br>
-            <input type="submit" value="Play!">
+            <a class="btn" type="submit" value="Play!" href="game.html">Play!</a>
         </form>
         
       </div>
