--- a/client/delete.html
+++ b/client/delete.html
@@ -10,11 +10,12 @@
   <body>
     <div class="container">
       <div id="home" class="flex-center flex-column">
-        <h1>Trivia Dash</h1>
-        <a class="btn" href="login.html">Login</a>
-        <a class="btn" href="register.html" onclick="createUser()">Create a New Account</a>
-        <a class="btn" href="highscores.html">High Scores</a>
-        <a class="btn" href="delete.html">Delete a User</a>
+        <h1>Delete an Account</h1>
+        <form id="createacct">
+            <input id="username" type="text" name="username" placeholder="Enter A Username" required><br><br>
+        </form>
+        <a class="btn" href="register.html" onclick="deleteUser()">Delete This Account</a>
+        <a class="btn" href="index.html">Go Home</a>
       </div>
     </div>
     <script src="index.js"></script>
