--- a/client/register.html
+++ b/client/register.html
@@ -10,14 +10,12 @@
   <body>
     <div class="container">
       <div id="home" class="flex-center flex-column">
-        <h1>Trivia Dash</h1>
-
-        <p>Create a New Account</p>
+        <h1>Create an Account</h1>
         <form id="createacct">
-            <input id="createUsername" type="text" name="username" placeholder="Enter A Username" required><br><br>
-            <a class="btn" type="submit" value="Play!" href="game.html">Play!</a>
+            <input id="username" type="text" name="username" placeholder="Enter A Username" required><br><br>
         </form>
-        
+        <a class="btn" href="register.html" onclick="registerUser()">Create a New Account</a>
+        <a class="btn" href="index.html">Go Home</a>
       </div>
     </div>
     <script src="index.js"></script>
