removed href statements

--- a/client/register.html
+++ b/client/register.html
@@ -14,7 +14,7 @@
         <form id="createacct">
             <input id="username" type="text" name="username" placeholder="Enter A Username" required><br><br>
         </form>
-        <a class="btn" href="register.html" onclick="registerUser()">Create a New Account</a>
+        <a class="btn" onclick="registerUser()">Create a New Account</a>
         <a class="btn" href="index.html">Go Home</a>
       </div>
     </div>
