--- a/client/game.html
+++ b/client/game.html
@@ -28,7 +28,7 @@
             <h1 class="hud-main-text" id="score">
               0
             </h1>
-            <a class="btn" href="end.html">Log In</a>
+            <a class="btn" href="index.html">Go Home</a>
           <br>
           <br>
           <br>
