Implemented delete page functionality

--- a/client/delete.html
+++ b/client/delete.html
@@ -11,6 +11,7 @@
     <div class="container">
       <div id="home" class="flex-center flex-column">
         <h1>Delete an Account</h1>
+        <p id="message"></p>
         <form id="createacct">
             <input id="username" type="text" name="username" placeholder="Enter A Username" required><br><br>
         </form>
